Fixed coverage tests